smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/trait-targets/traits-on-metadata.smithy
// Expected a namespace definition, but found unexpected syntax
@deprecated
metadata foo = "bar"
